syntax = "proto3";
package comment;
option go_package = "comment";
import "user.proto";

message Comment {
  uint32 id = 1; // 视频评论id
  user.User user = 2; // 评论用户信息
  string content = 3; // 评论内容
  string create_date = 4; // 评论发布日期，格式 mm-dd
}

message CommentActionRequest {
  uint32 user_id = 1; // 用户鉴权token
  uint32 video_id = 2; // 视频id
  uint32 action_type = 3; // 1-发布评论，2-删除评论
  optional string comment_text = 4; // 用户填写的评论内容，在action_type=1的时候使用
  optional uint32 comment_id = 5; // 要删除的评论id，在action_type=2的时候使用
}

message CommentActionResponse {
  uint32 status_code = 1;
  optional string status_message = 2;
  optional Comment comment = 3; // 评论成功返回评论内容，不需要重新拉取整个列表
}

message CommentListRequest {
  uint32 video_id = 2; // 视频id
}

message CommentListResponse {
  uint32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Comment comment_list = 3; // 评论列表
}

message CommentCountRequest {
  uint32 video_id = 1;
}

message CommentCountResponse {
  uint32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  uint32 comment_count = 3; //评论数数量
}

service CommentService {
  rpc CommentAction(CommentActionRequest) returns (CommentActionResponse);
  rpc GetCommentList(CommentListRequest) returns (CommentListRequest);
  rpc GetCommentCount(CommentCountRequest) returns(CommentCountResponse);
}
